# damapper_bwt

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  README.md  configure  configure.ac  release.sh
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: DB.c  DB.h  Makefile.am  Makefile.in  QV.c  QV.h  align.c  align.h  damapper_bwt.cpp  map.c  map.h  prs.ic  prs.ih  prs_uint64_t_pair.c  prs_uint64_t_pair.h
